Fix issue color text on dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,6 @@ html {
 }
 
 .main-bg-dark {
-  color: white;
+  color: white !important;
 }
 
